@@ -4,8 +4,8 @@
 
 pkgbase="openoffice-base-beta"
 pkgname=('openoffice-base-beta' 'openoffice-sdk-beta')
-_OO_milestone=OOO320_m2
-pkgver=3.2.0_${_OO_milestone/OOO/ooo} # =3.2.0 BETA
+_OO_milestone=OOO320_m3
+pkgver=3.2.0_${_OO_milestone/OOO/ooo} # m2=3.2.0 BETA
 pkgrel=1
 arch=('i686' 'x86_64')
 license=('LGPL3')
@@ -31,21 +31,6 @@ source=(${pkgname}-${_OO_milestone}.tar.gz
 	buildfix_system_db48.diff
 	openoffice-beta.profile)
 options=('!distcc' '!ccache' '!makeflags')
-md5sums=('229b6f368e623c7d45c20eca0d04515d'
-         'e3a0b76dcd876f3d721ee7183729153d'
-         '90897451b6cfed490e481f06d45408aa'
-         '71f136a31e296a04ab68932a31dd533e'
-         '6c596129fb48316226ce3adfd3a4c86d'
-         '1dc7480a04f572ad136d35923a2af66d'
-         'c8e82b4d2324fe62ad8c6e29213e80b5'
-         '863a3ab2c17a3d11b8fa3ec321986366'
-         '0cd6f3525939d3ef6e5a30ad30c25d27'
-         '8d68d44c941a687813ddd968383cdf27')
-
-# see ftp://ftp.linux.cz/pub/localization/OpenOffice.org/devel/build/build for upstream build instructions
-
-## TODO: installation of extensions, see http://cvs.fedora.redhat.com/viewvc/rpms/openoffice.org/devel/openoffice.org.spec?revision=1.2021&view=markup
-
 
 build() {
 	cd ${srcdir}
@@ -105,7 +90,6 @@ build() {
 	# http://www.openoffice.org/issues/show_bug.cgi?id=103205
 	unset CFLAGS
 	unset CXXFLAGS
-#	export ARCH_FLAGS="$CFLAGS"
 
 	# Need to recreate the configure script because of patches
 	autoreconf -v || return 1
@@ -237,7 +221,16 @@ package_openoffice-base-beta() {
 	  install -D -m644 $i ${pkgdir}/usr/lib/openoffice/share/extension/install/$i || return 1
 	done
 	popd
-
+	
+	# install extensions
+       pushd ${srcdir}/${_OO_milestone}/solver/320/unxlng?6.pro/bin
+         install -D -m644 sun-report-builder.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/sun-report-builder.oxt || return 1
+	 install -D -m644 swext/wiki-publisher.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/wiki-publisher.oxt || return 1
+	 install -D -m644 minimizer/sun-presentation-minimizer.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/sun-presentation-minimizer.oxt || return 1
+	 install -D -m644 presenter/presenter-screen.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/presenter-screen.oxt || return 1
+	 install -D -m644 pdfimport/pdfimport.oxt ${pkgdir}/usr/lib/openoffice/share/extension/install/pdfimport.oxt || return 1
+       popd
+	
 	# prepare filesystem entries
 	mkdir -p ${pkgdir}/usr/{bin,share/applications}
 	mkdir -p ${pkgdir}/usr/share/icons/{hicolor,locolor}
@@ -287,7 +280,8 @@ package_openoffice-base-beta() {
 	rm -f soffice spadmin
 	ln -sf /usr/lib/openoffice-beta/program/soffice soffice-beta
 	ln -sf /usr/lib/openoffice-beta/program/spadmin spadmin-beta
-
+	ln -sf /usr/lib/openoffice-beta/program/unopkg unopkg-beta
+	
 	cd ${pkgdir}/usr/share/applications/
 	for desktopz in *.desktop
 	   do mv $desktopz Beta-$desktopz
